tilføjet rigtige billeder og kontakt side

--- a/hudpleje.html
+++ b/hudpleje.html
@@ -65,7 +65,7 @@
 <main>
   <div class="wrapper">
     <section class=hero>
-		<img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
+		<img class="heroimg" src="billeder/hudpleje.png" alt="billede af hudpleje">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
 			<h1> Skrædersyet hudpleje</h1>
@@ -76,10 +76,20 @@
 	<section class="pakke1">
 		<article class="pakkebeskrivelser">
 		<h3>Sølv</h3>
-		<p>Ganske lækker behandling hvor der kan indgå alt det nedenstående med tiden bruges på det der er vigtigst, efter aftale med dig. </p> <p>Tid 60 min</p>
+		<p>Ansigt og øjne</p>
+		<p>Ganske lækker behandling hvor der kan indgå alt det nedenstående med tiden bruges på det der er vigtigst, efter aftale med dig. </p> 
 		<ul>
-		
+		 <li>Facemap i hele ansigt</li>
+		<li>Analyse over hvad der skal til</li>
+		<li>Særlige ampuler</li>
+		<li>Særlig øjenmaske</li>
+		<li>Ansigtsmassage (Hvis tid)</li>
+		<li>Dybderens</li>
+		<li>Masker efter behov</li>
+		<li>Evt. flere serum</li>
 		</ul>
+			
+			<p>Tid 60 min</p>
 				</article>
 	<article class="pakkepris">
 		<h3 class="pris">795,-</h3>
@@ -89,8 +99,21 @@
 	<section class="pakke2">
 		<article class="pakkebeskrivelser">
 		<h3>Guld</h3>
+		<p>Ansigt, øjne, hals & decolette & nakke-skulder massage</p>
 		<p>
-		Ganske lækker behandling hvor der kan indgå alt det nedenstående med tiden bruges på det der er vigtigst, efter aftale med dig. </p> <p>Tid 75 min.</p>
+		Ganske lækker behandling hvor der kan indgå alt det nedenstående med tiden bruges på det der er vigtigst, efter aftale med dig. </p> 
+			<ul>
+		 <li>Facemap i hele ansigt</li>
+		<li>Særlige ampuler</li>
+		<li>Særlig øjenmaske</li>
+		<li>Ansigtsmassage (Hvis tid)</li>
+		<li>Dybderens/ diamantslibning</li>
+		<li>Peeling/ frugtsyre</li>
+		<li>Sepcial masker på forskellige områder</li>
+		<li>Evt. flere serum, på flere områder</li>
+		</ul>
+			
+			<p>Tid 75 min.</p>
 		<ul>
 		
 		</ul>
@@ -103,8 +126,11 @@
 		<section class="pakke3">
 			<article class="pakkebeskrivelser">
 		<h3>Diamant</h3>
+		<p>Ansigt, Øjne, Hals, Decolette, Bryn farve & ret, Fodmaske, håndmaske, Hovedbundsmassage & Ansigtsmassage</p>
 		<p>Luksus behandling der skal friske dig helt op fra top til tå. Afslapning til det yderste og en ny og frisk udgave af dig selv.
-		Ultimativ forkælelse med fantastiske resultater </p>
+		</p>
+		<p>Ultimativ forkælelse med fantastiske resultater </p>
+		<p>Indeholder alt det din hud har brug for, og god tid til at få de bedste resultater</p>
 		<p></p>Tid 90 min.
 
 			</article>
