--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	  
 	  
     <section class=hero>
-		<img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
+		<img class="heroimg" src="billeder/forside.png" alt="makeup">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
 			<h1>Makeupkursus der passer specielt til dig</h1>
@@ -93,7 +93,9 @@
 		
 		<h4> Vi har taget vores forbehold</h4><p>
 		Vores behandlings briks er beklædt med blid plast, som skiftes mellem hver kunde. Dun behandler er iført maske og handsker, som på billedet eller til at finde bag Visir eller glas.</p>
-      <article class="covidbillede"> </article>
+      <article class="covidbillede"> 
+		<img class="covidbillede" src="billeder/forsidecovid.png" alt="makeup">
+		</article>
     </section >
     <section class="volkommenbox">
       <h2>Velkommen til en verden af skønhed</h2>
@@ -113,8 +115,11 @@
 	Book din tid under behandlinger, eller ring på tlf;
 	</p>
 		<p class="tlf">41 36 36 36</p>
-      <article class="volkommenbillede"> </article>
+      <article class="volkommenbillede"> 
+		  <img class="volkommenbillede" src="billeder/forsidevelkommen.png" alt="makeup"></article>
     </section>
+	  
+	  
     <section class="reviews">
       <h2>Andre kunder siger</h2>
       <article class="review-1">
