--- a/kurser.html
+++ b/kurser.html
@@ -65,8 +65,8 @@
 <main>
   <div class="wrapper">
     <section class=hero>
-		<img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
-		<article class="overlay"></article>
+		<img class="heroimg" src="billeder/kurser.png" alt="Bryllupsbillede">
+		<article class="Makeup børster"></article>
 		<aricle class="herotxt" >
 			<h1> Kurser</h1>
 		</aricle>
@@ -75,10 +75,17 @@
 	  
 	  <section class="kursusbeskrivelse">
 	  <h4>Lær at lægge makeup af en proffesionel </h4>
-	<p>beskrivelse af kurser og hvordan de foregår. Reklamer, shows, magasiner, events, reklamefilm, bryllupper gallafester m.m.
-myStylist artisten har prøvet det hele og mere til. 
+	<p>Reklamer, shows, magasiner, events, reklamefilm, bryllupper gallafester m.m.
+		myStylist artisten har prøvet det hele og mere til. </p><p>
 
-Adrijana er erfaren og kreativ ildsjæl, med øje for detaljer og kreative unikke looks.
+Adrijana er erfaren og kreativ ildsjæl, med øje for detaljer og kreative unikke looks. Hun er derfor godt klædt på til at guide dig i makeuppens verden. </p><p>
+Om du er helt nybegynder, der aldrig har brugt makeup, fordi du ikke har mod på at starte fra bunden helt alene, eller om du er meget øvet og bare gerne vil bliver rigtig dygtig til at lægge den perfekte makeup til lige netop dit ansigt, så er det kurset for dig her.
+</p><p>
+Alle kurser foregår online, så du kan deltage i dit eget hjem, uden at skulle i kontakt med en masse nye mennesker. Dette er selvfølgelig af hensyn til covid-19, så vi alle kan passe bedst muligt på hinanden. 
+</p><p>
+Selvom kurset foregår online, er det stadig en live chat mellem dig og stylisten, Adrijana. Så du kan stadig stille spørgsmål, og det der bliver undervist i, vil være relevant for dem der deltager på lige nettop det kursus. Det er derfor meget mere givende, end optagede videoer, som er lavet til at skulle passe til alle der ser dem. 
+</p><p>
+Lyder det som noget for dig, så kig nedenfor, hvor du kan læse mere om de enkelte kurser, og vælge om du vil have et enkelt kursus, hvor det kun er dig og stylisten. Eller om et gruppekursus med lidt flere deltagere. 
 
 
  </p>
