--- a/om.html
+++ b/om.html
@@ -62,7 +62,38 @@
 	
 <main>
 	<div class="wrapper">
+	  
+    <section class=hero>
+		<img class="heroimg" src="billeder/om.png" alt="billede af makeup">
+		<article class="overlay"></article>
+		<aricle class="herotxt" >
+			<h1>Om Mystylist</h1>
+		</aricle>
+	</section>
+		
+	<section class="omside">
+		<article class="ombillede">
+		<img class="portrat" src="billeder/OmAdrijana.png" alt="portræt af mystylist">
+		</article>
+		<article class="omtekst">
+			<p>Mit navn er Adrijana og jeg er indehaver af MyStylist.
+				Jeg har erfaring som hår og makeupartist, der rækker over 20 år. </p><p>
+			Jeg er uddannet kosmetolog på tiende år og uddannet permanentmakeupartist, en uddannelse som jeg tog på 
+			Monalisa cosmetiks. </p><p>
+			Jeg har altid gået med tanken om at lave mit eget makeupmærke, 
+			så i år 2006 gik jeg i gang med, at finde ud af hvordan jeg kunne få 
+			min drøm til virkelighed på bedst mulig vis. Endelig for 4 år siden kom mit mærke IZANEL ud på markedet. 
+			IZANEL er skabt ud fra mine erfaringer som makeupartist og kosmetolog. 
+			Samtidig med at makeuppen føles lækker på huden, er godt pigmenteret 
+			og har en god holdbarhed, så går den også ind og virker som 
+			hudpleje.</p><p>
+			Jeg elsker mit arbejde, det er dejligt varieret. Jeg får lov til at lære en masse mennesker at kende og give dem et smil på læben. Jeg elsker at se hvordan en behandling kan være med til at styrke kundens selvtillid og udstråling. Det er det bedste ved mit arbejde.</p>
+		</article>
+		
+	</section>
+		
 	
+	  
 	
 		</div>
 </main>
