--- a/ansigtsbehandlinger.html
+++ b/ansigtsbehandlinger.html
@@ -62,7 +62,7 @@
 
   <div class="wrapper">
     <section class=hero>
-		<img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
+		<img class="heroimg" src="billeder/ansigtsbehandlinger.png" alt="billede af skønhedsprodukter">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
 			<h1> Ansigtsbehandlinger</h1>
