--- a/bryllup.html
+++ b/bryllup.html
@@ -50,7 +50,7 @@
 	
 <main>
   <div class="wrapper">
-    <section class=hero> <img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
+    <section class=hero> <img class="heroimg" src="billeder/brud.png" alt="Bryllupsbillede">
       <article class="overlay"></article>
       <aricle class="herotxt" >
         <h1> Hår og makeup til bruden</h1>
@@ -160,30 +160,53 @@
 <div class="slideshow-container">
 
 <div class="billede fade">
-  <img src="https://cdn7.dissolve.com/p/D1129_19_611/D1129_19_611_1200.jpg" style="width:100%">
+  <img src="billeder/slideshow/brud1.png" style="width:100%">
   
 </div>
 
 <div class="billede fade">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/2010-kodiak-bear-1.jpg/440px-2010-kodiak-bear-1.jpg" style="width:100%">
+  <img src="billeder/slideshow/brud2.png" style="width:100%">
+  
+</div><div class="billede fade">
+  <img src="billeder/slideshow/brud3.png" style="width:100%">
+  
+</div><div class="billede fade">
+  <img src="billeder/slideshow/brud4.png" style="width:100%">
+  
+</div><div class="billede fade">
+  <img src="billeder/slideshow/brud5.png" style="width:100%">
+  
+</div><div class="billede fade">
+  <img src="billeder/slideshow/brud6.png" style="width:100%">
+  
+</div><div class="billede fade">
+  <img src="billeder/slideshow/brud7.png" style="width:100%">
+  
+</div><div class="billede fade">
+  <img src="billeder/slideshow/brud8.png" style="width:100%">
+  
+</div><div class="billede fade">
+  <img src="billeder/slideshow/brud9.png" style="width:100%">
+  
+</div><div class="billede fade">
+  <img src="billeder/slideshow/brud10.png" style="width:100%">
   
 </div>
-
-<div class="billede fade">
-  <img src="https://previews.123rf.com/images/jmrocek/jmrocek1911/jmrocek191100010/133248099-an-adorable-cub-and-adult-female-of-brown-bear-ursus-arctos-with-fluffy-coat-united-in-the-middle-of.jpg" style="width:100%">
-  
-</div>
-
-<a class="prev" onclick="skiftSlide(-1)">&#10094; <!--pil--></a>
-<a class="next" onclick="skiftSlide(1)">&#10095; <!--pil--></a>
-
-</div>
+	<a class="prev" onclick="skiftSlide(-1)">&#10094; <!--pil--></a> <a class="next" onclick="skiftSlide(1)">&#10095; <!--pil--></a> 
+	  </div>
 <br>
 
 <div class="prikker">
   <span class="prik" onclick="angivSlide(1)"></span> 
   <span class="prik" onclick="angivSlide(2)"></span> 
   <span class="prik" onclick="angivSlide(3)"></span> 
+	<span class="prik" onclick="angivSlide(4)"></span>
+	<span class="prik" onclick="angivSlide(5)"></span>
+	<span class="prik" onclick="angivSlide(6)"></span>
+	<span class="prik" onclick="angivSlide(7)"></span>
+	<span class="prik" onclick="angivSlide(8)"></span>
+	<span class="prik" onclick="angivSlide(9)"></span>
+	<span class="prik" onclick="angivSlide(10)"></span>
 </div>
 		
 	
