--- a/kontakt.html
+++ b/kontakt.html
@@ -62,7 +62,83 @@
 	
 <main>
 	<div class="wrapper">
-	
+	  <section class=hero>
+		<img class="heroimg" src="billeder/kontakt.png" alt="billede af massagebriks">
+		<article class="overlay"></article>
+		<aricle class="herotxt" >
+			<h1> Kontakt</h1>
+		</aricle>
+	</section>
+		
+		<section class="kontakt">
+		<article class="kontaktform">
+			<h4>Har du noget på hjertet?
+</h4>
+			<form>
+			 <form action="action_page.php">
+				<input type="text" id="fname" name="firstname" placeholder="Navn">
+				<input type="tel" id="phone" name="phone" placeholder="Telefon" >
+				<input type="email" id="email" name="email" placeholder="E-mail" >
+				<textarea id="emne" name="subject" placeholder="Skriv besked" style="height:200px"></textarea>
+				<a class="bookknap" href="#">Send</a>
+			</form>
+				
+		</article>
+		<article class="kontaktinfo">
+			
+			<h4>Adresse</h4>
+			<p>Godthåbsvej 177, 2720 Vanløse. </p>
+			<h4>Email</h4>
+			<p>info@myStylist.dk​</p>
+			<h4>Klinikken</h4>
+			<p>60 56 41 36</p>
+			<h4>Hår og makeup artist</h4>
+			<p>41 36 36 36</p>
+		</article>
+		</section>
+		
+		
+		
+	<section class="kliniksec">
+		
+		<article class="klinikinfo">
+			<h4>Er du i tvivl om hvor du kan finde klinikken?</h4>
+			
+			<p>
+			MyStylist har adresse på;
+			Godthåbsvej 177, 2720 Vanløse.
+			</p>
+			<p>
+			MyStylist deler entre med en anden virksomhed, 
+			Vi understreger derfor at vores indgang, er døren 
+			til venstre, som ses ovre på billedet. 
+			</p>
+			<p>
+			Er du med offenligt ligger Klinikken kun 5 minutters 
+			gang fra Grøndal station, og derudover lige ud til en bus.
+			</p>
+			<p>
+			Er du i bil tilbyder vi gratis parkering, hele vejen op 
+			ad Godthåbsvej.
+			</p>
+			<p>
+			Cykler er velkomne uden foran klinikken, men må 
+			ikke sættes op Ad ruden.
+			</p>
+			<p>
+			Jeg glæder mig til at se dig i klinikken.
+			</p>
+			<p>
+			Mvh. <img class="underskrift" src="billeder/kontaktunderskrift.png" alt="underskrift">
+			</p>
+			
+		</article>
+		<article class="klinikfotos">
+			<img class="klinikfoto" src="billeder/kontaktshop.png" alt="portræt af mystylist">
+			<img class="kort" src="billeder/kontaktgoogle.png" alt="portræt af mystylist">
+		</article>
+		
+	</section>
 	
 		</div>
 </main>
