--- a/kropsbehandlinger.html
+++ b/kropsbehandlinger.html
@@ -63,11 +63,19 @@
 	
 <main>
 	<div class="wrapper">
+		   <section class=hero>
+		<img class="heroimg" src="billeder/kropsbehandlinger.png" alt="billede af sten">
+		<article class="overlay"></article>
+		<aricle class="herotxt" >
+			<h1>Voks</h1>
+		</aricle>
+	</section>
 	
 	<section class="pakkeA">
 		<article class="pakkebeskrivelser">
 		<h3>Hotstone massage</h3>
-			<p>mangler beskrivelse bla lblba kdb aljwb sdj qwl dkj qwjkd jkq wkj qkjw dkj qwkjd kjqw kjd kjw kjd kjw kjd kjwe kjf kjwe kj
+			<p>Har du mange muskelspændinger og kæmper med dem dagligt, så kan hotstone massage være noget for dig. 
+Der bruges opvarmede sten til at massere dybdegående, og er langt mere effektiv end at bruge hænderne. 
 		</p>
 	
 		
