--- a/manicure.html
+++ b/manicure.html
@@ -68,7 +68,7 @@
 <main>
   <div class="wrapper">
     <section class=hero>
-		<img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
+		<img class="heroimg" src="billeder/manicureogpedi.png" alt="negelelak">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
 			<h1> Manicure og pedicure</h1>
@@ -180,13 +180,67 @@
 		 </section>
 		 
 	  </section>
+	  
+	  
 	  <div class="slideshow-container">
-  <div class="billede fade"> <img src="https://cdn7.dissolve.com/p/D1129_19_611/D1129_19_611_1200.jpg" style="width:100%"> </div>
-  <div class="billede fade"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/2010-kodiak-bear-1.jpg/440px-2010-kodiak-bear-1.jpg" style="width:100%"> </div>
-  <div class="billede fade"> <img src="https://previews.123rf.com/images/jmrocek/jmrocek1911/jmrocek191100010/133248099-an-adorable-cub-and-adult-female-of-brown-bear-ursus-arctos-with-fluffy-coat-united-in-the-middle-of.jpg" style="width:100%"> </div>
-  <a class="prev" onclick="skiftSlide(-1)">&#10094; <!--pil--></a> <a class="next" onclick="skiftSlide(1)">&#10095; <!--pil--></a> </div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure2.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure3.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure4.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure5.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure6.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure7.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure8.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure9.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure10.png" style="width:100%">  
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/manicure11.png" style="width:100%">  		  
+			</div>	  
+		  
+  <a class="prev" onclick="skiftSlide(-1)">&#10094; <!--pil--></a> 
+  <a class="next" onclick="skiftSlide(1)">&#10095; <!--pil--></a> 
+</div>
 <br>
-<div class="prikker"> <span class="prik" onclick="angivSlide(1)"></span> <span class="prik" onclick="angivSlide(2)"></span> <span class="prik" onclick="angivSlide(3)"></span> </div>
+<div class="prikker">
+  <span class="prik" onclick="angivSlide(1)"></span> 
+  <span class="prik" onclick="angivSlide(2)"></span> 
+  <span class="prik" onclick="angivSlide(3)"></span> 
+	<span class="prik" onclick="angivSlide(4)"></span>
+	<span class="prik" onclick="angivSlide(5)"></span>
+	<span class="prik" onclick="angivSlide(6)"></span>
+	<span class="prik" onclick="angivSlide(7)"></span>
+	<span class="prik" onclick="angivSlide(8)"></span>
+	<span class="prik" onclick="angivSlide(9)"></span>
+	<span class="prik" onclick="angivSlide(10)"></span>
+	<span class="prik" onclick="angivSlide(11)"></span>
+</div>
 <p class="mereinfo"> Er du interesseret i at se flere billeder fra MyStylist. Så gå ind og følg med på vores <a class="link" href="https://www.instagram.com/mystylist/?hl=en">Instagram</a>, og/eller på vores <a class="link" href="https://www.facebook.com/myStylist.stylist">facebook</a> side. </p>
 	
 	</div>
