--- a/styling-har.html
+++ b/styling-har.html
@@ -32,7 +32,7 @@
   <a href="kurser.html">Kurser</a> <a href="om.html">Om</a> <a href="shop.html">Shop</a> <a href="kontakt.html">Kontakt</a> </nav>
 <main>
 <div class="wrapper">
-<section class=hero> <img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
+<section class=hero> <img class="heroimg" src="billeder/harogmakeup.png" alt="hår billede">
   <article class="overlay"></article>
   <aricle class="herotxt" >
     <h1> Hår og makeup</h1>
@@ -162,13 +162,83 @@
     <h4 id="konfpris3">950,-</h4>
   </section>
 </section>
-<div class="slideshow-container">
-  <div class="billede fade"> <img src="https://cdn7.dissolve.com/p/D1129_19_611/D1129_19_611_1200.jpg" style="width:100%"> </div>
-  <div class="billede fade"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/2010-kodiak-bear-1.jpg/440px-2010-kodiak-bear-1.jpg" style="width:100%"> </div>
-  <div class="billede fade"> <img src="https://previews.123rf.com/images/jmrocek/jmrocek1911/jmrocek191100010/133248099-an-adorable-cub-and-adult-female-of-brown-bear-ursus-arctos-with-fluffy-coat-united-in-the-middle-of.jpg" style="width:100%"> </div>
-  <a class="prev" onclick="skiftSlide(-1)">&#10094; <!--pil--></a> <a class="next" onclick="skiftSlide(1)">&#10095; <!--pil--></a> </div>
+	
+	
+	
+		
+ <div class="slideshow-container">
+	 
+	 		<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup1.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup2.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup3.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup4.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup5.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup6.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup7.png" style="width:100%">
+			</div>
+
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup9.png" style="width:100%">
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup10.png" style="width:100%">  
+			</div>
+
+			<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup11.png" style="width:100%">  		  
+			</div>	
+	 
+	 		<div class="billede fade">
+			  <img src="billeder/slideshow/hårogmakeup12.png" style="width:100%">
+			</div>
+
+		  
+  <a class="prev" onclick="skiftSlide(-1)">&#10094; <!--pil--></a> 
+  <a class="next" onclick="skiftSlide(1)">&#10095; <!--pil--></a> 
+</div>
 <br>
-<div class="prikker"> <span class="prik" onclick="angivSlide(1)"></span> <span class="prik" onclick="angivSlide(2)"></span> <span class="prik" onclick="angivSlide(3)"></span> </div>
+<div class="prikker">
+  <span class="prik" onclick="angivSlide(1)"></span> 
+  <span class="prik" onclick="angivSlide(2)"></span> 
+  <span class="prik" onclick="angivSlide(3)"></span> 
+	<span class="prik" onclick="angivSlide(4)"></span>
+	<span class="prik" onclick="angivSlide(5)"></span>
+	<span class="prik" onclick="angivSlide(6)"></span>
+	<span class="prik" onclick="angivSlide(7)"></span>
+	<span class="prik" onclick="angivSlide(8)"></span>
+	<span class="prik" onclick="angivSlide(9)"></span>
+	<span class="prik" onclick="angivSlide(10)"></span>
+	<span class="prik" onclick="angivSlide(11)"></span>
+</div>
+<p class="mereinfo"> Er du interesseret i at se flere billeder fra MyStylist. Så gå ind og følg med på vores <a class="link" href="https://www.instagram.com/mystylist/?hl=en">Instagram</a>, og/eller på vores <a class="link" href="https://www.facebook.com/myStylist.stylist">facebook</a> side. </p>
+	
+	</div>
+
+	
+	
+	
+	
 <p class="mereinfo"> Er du interesseret i at se flere billeder fra MyStylist. Så gå ind og følg med på vores <a class="link" href="https://www.instagram.com/mystylist/?hl=en">Instagram</a>, og/eller på vores <a class="link" href="https://www.facebook.com/myStylist.stylist">facebook</a> side. </p>
 </div>
 </main>
