--- a/voks.html
+++ b/voks.html
@@ -67,7 +67,7 @@
 <main>
   <div class="wrapper">
     <section class=hero>
-		<img class="heroimg" src="billeder/random.jpg" alt="Bryllupsbillede">
+		<img class="heroimg" src="billeder/voks.png" alt="billede af voks">
 		<article class="overlay"></article>
 		<aricle class="herotxt" >
 			<h1>Voks</h1>
